@@ -95,6 +95,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #15544: Fix Decimal.__float__ to work with payload-carrying NaNs.
+
 - Issue #15199: Fix JavaScript's default MIME type to application/javascript.
   Patch by Bohuslav Kabrda.
 
